@@ -1,4 +1,4 @@
- /* config.h for snapwm.c [ 0.0.2 ]
+ /* config.h for snapwm.c [ 0.0.3 ]
  *
  *  Started from catwm 31/12/10
  *  Bad window error checking and numlock checking used from
@@ -22,6 +22,8 @@
 #ifndef CONFIG_H
 #define CONFIG_H
 
+#define RCFILE "/home/pnewm/.snapwmrc"
+
 #define CLEANMASK(mask) (mask & ~(numlockmask | LockMask))
 
 /* Mod (Mod1 == alt) (Mod4 == Super/windows) */
@@ -37,15 +39,7 @@
 #define FOLLOW_WINDOW   0  /* 1=Don't 0=Follow the window when moved to a different desktop */
 #define CLICK_TO_FOCUS  1  /* 1=Don't 0=Focus an unfocused window when clicked */
 #define STATUS_BAR      0  /* 1=Don't 0=Show a statusbar at the bottom */
-#define FONTNAME        "-*-clean-*-*-*-*-14-*-*-*-*-*-*-*" // "-*-freesans-*-r-*"
 #define DESKTOPS        6  /* Must edit DESKTOPCHANGE keys to suit */
-
-// Colors
-#define FOCUS           "#664422" // dkorange
-#define UNFOCUS         "#004050" // blueish
-#define BORDERCOLOR     "#666666" // mid grey
-#define FONTCOLOR       "#ffffff" // white
-#define HILIGHT         "#006070" // lighter blueish
 
 // Applications to a specific desktop
 static const Convenience convenience[] = { \
@@ -92,6 +86,7 @@ static key keys[] = {
     {  MOD1,             XK_v,          spawn,             {.com = dmenucmd}},
     {  MOD1,             XK_p,          resize_stack,      {.i = 10}},
     {  MOD1,             XK_o,          resize_stack,      {.i = -10}},
+    {  MOD1,             XK_u,          update_config,     {NULL}},
     {  MOD1,             XK_Tab,        last_desktop,      {NULL}},
     {  MOD1,             XK_Return,     spawn,             {.com = urxvtcmd}},
     {  MOD1,             XK_Up,	        spawn,             {.com = volupcmd}},
