@@ -1,0 +1,12 @@
+// win_focus . dkorange
+colour1 "#664422"
+// win_unfocus . blueish
+colour2 "#004050"
+// hilight . lighter blueish
+colour3 "#006070"
+// bordercolor . mid grey
+colour4 "#666666"
+// fontcolor . white
+colour5 "#ffffff"
+FONTNAME "-*-clean-*-*-*-*-14-*-*-*-*-*-*-*"
+// "-*-freesans-*-r-*"
